# spec-driver

./: .gitignore  .satan-patch.toml  AGENTS.md  CHEATSHEET.md  CLAUDE.md  CONVERGENCE.md  Justfile  LICENSE.md  README.md  RESTRUCTURING_COMPLETE.md  RESTRUCTURING_PHASE1_COMPLETE.md  RESTRUCTURING_PHASE2_3_COMPLETE.md  RESTRUCTURING_PLAN.md  autobahn  backlog  docgen.md  flake.nix  memory  pyproject.toml  scratch.md  shell.nix
.agents/: skills  spec-driver-boot.md
.agents/skills/: dispatch  spec-driver  update-delta-docs  using-spec-driver
.claude/: claude.commands  commands  settings.json  settings.local.json
.claude/agents/: dispatch-worker.md
.claude/hooks/: artifact_event.py  artifact_event_test.py  prompt.sh  startup.sh
.claude/rules/: spec-driver-boot.md
.claude/skills/: sub-driver
.cursor/rules/: spec-driver-bootstrap.mdc
.github/workflows/: static.yml
.pi/: home
.pi/extensions/: spec-driver-artifact-events.ts
.serena/: project.yml
.spec-driver/: AGENTS.md  README.md  about  doctrine.md  skills.allowlist  templates  workflow.toml
.spec-driver/agents/: boot.md  exec.md  glossary.md  memory.md  policy.md  routing.md  workflow.md
.spec-driver/decisions/: ADR-001-use-spec-driver-to-build-spec-driver.md  ADR-002-do-not-store-backlinks-in-frontmatter.md  ADR-003-separate_unit_and_assembly_specs.md  ADR-004-canonical_workflow_loop.md  ADR-005-memories_and_skills_are_the_canonical_guidance_layer.md  ADR-006-consolidate_workspace_directories_under_spec_driver.md  ADR-007-contracts_are_derived_observed_corpus_with_dedicated_canonical_storage.md  ADR-008-normative_lifecycle_truth_and_observed_evidence_reconciliation.md  ADR-009-standard_registry_api_convention.md  ADR-010-default_placement_heuristic_for_structured_artifact_metadata.md  ADR-011-cli_registry_access_must_route_through_workspace.md
.spec-driver/drift/: DL-047-spec-corpus-reconciliation.md  DL-048-de_138_sweep_fm_block_reconciliation.md  DL-049-de_140_migrate_prod_007.md  DL-050-de_140_migrate_prod_001.md  DL-051-de_140_migrate_prod_002.md  DL-052-de_140_migrate_prod_004.md  DL-053-de_140_migrate_prod_005.md  DL-054-de_140_migrate_prod_006.md  DL-055-de_140_migrate_prod_008.md  DL-056-de_140_migrate_prod_009.md  DL-057-de_140_migrate_prod_011.md  DL-058-de_140_migrate_spec_114.md  DL-059-de_140_migrate_spec_116.md  DL-060-de_140_migrate_spec_124.md  DL-061-de_140_migrate_spec_125.md  DL-062-de_140_migrate_spec_128.md  DL-063-de_140_migrate_spec_129.md  DL-064-de_140_migrate_spec_151.md  DL-065-de_140_migrate_prod_003.md  DL-066-de_140_migrate_prod_010.md  DL-067-de_140_migrate_prod_012.md  DL-068-de_140_migrate_prod_013.md  DL-069-de_140_migrate_prod_014.md  DL-070-de_140_migrate_prod_015.md  DL-071-de_140_migrate_prod_016.md  DL-072-de_140_migrate_spec_110.md  DL-073-de_140_migrate_spec_112.md  DL-074-de_140_migrate_spec_122.md
.spec-driver/hooks/: doctrine.md
.spec-driver/memory/: mem.artifact-pattern-sync.md  mem.concept.spec-driver.audit.md  mem.concept.spec-driver.backlog.md  mem.concept.spec-driver.ceremony.pioneer.md  mem.concept.spec-driver.ceremony.settler.md  mem.concept.spec-driver.ceremony.town-planner.md  mem.concept.spec-driver.contract.md  mem.concept.spec-driver.delta.md  mem.concept.spec-driver.design-revision.md  mem.concept.spec-driver.philosophy.md  mem.concept.spec-driver.plan.md  mem.concept.spec-driver.posture.md  mem.concept.spec-driver.relations.md  mem.concept.spec-driver.requirement-lifecycle.md  mem.concept.spec-driver.revision.md  mem.concept.spec-driver.spec.md  mem.concept.spec-driver.truth-model.md  mem.concept.spec-driver.verification.md  mem.concept.spec.assembly-only-taxonomy.md  mem.fact.architecture.core-misplaced-modules.md  mem.fact.architecture.import-linter-supekku-blindspot.md  mem.fact.autobahn-independence.md  mem.fact.backlog.relations-in-frontmatter.md  mem.fact.claude-code.context-loading.md  mem.fact.cli.clirunner-no-mix-stderr.md  mem.fact.cli.typer-exit-inherits-runtimeerror.md  mem.fact.cli.typer-group-subclass.md  mem.fact.core.markdown-load-error-taxonomy.md  (+58 more)
assets/: process-more.d2  process.d2
change/: audits  deltas  revisions
docs/: comands-workflow.md  commands-workflow.md  index.html  ts-docgen-critical-review-plan.md  ux-research-cli-2025-11-03.md
drift/: DL-047-spec-corpus-reconciliation.md
memory/: MEM-001-skinny_cli_pattern.md  MEM-002-formatter_separation_of_concerns.md  mem.concept.spec-driver.audit.md  mem.concept.spec-driver.backlog.md  mem.concept.spec-driver.ceremony.pioneer.md  mem.concept.spec-driver.ceremony.settler.md  mem.concept.spec-driver.ceremony.town-planner.md  mem.concept.spec-driver.contract.md  mem.concept.spec-driver.delta.md  mem.concept.spec-driver.design-revision.md  mem.concept.spec-driver.philosophy.md  mem.concept.spec-driver.plan.md  mem.concept.spec-driver.posture.md  mem.concept.spec-driver.relations.md  mem.concept.spec-driver.requirement-lifecycle.md  mem.concept.spec-driver.revision.md  mem.concept.spec-driver.spec.md  mem.concept.spec-driver.truth-model.md  mem.concept.spec-driver.verification.md  mem.concept.spec.assembly-only-taxonomy.md  mem.fact.spec-driver.coverage-gate.md  mem.fact.spec-driver.requirement-bundle-files.md  mem.fact.spec-driver.status-enums.md  mem.pattern.cli.skinny.md  mem.pattern.formatters.soc.md  mem.pattern.installer.boot-architecture.md  mem.pattern.spec-driver.core-loop.md  mem.pattern.spec-driver.delta-completion.md  mem.pattern.spec-driver.installer-and-boot.md  mem.signpost.spec-driver.ceremony.md  mem.signpost.spec-driver.overview.md  mem.thread.de-041.md
nix/: spec-dev-jail.nix
planning/: 2026-02-20-contract-mirror-tree-index.md
scripts/: normalise_frontmatter.py
skills/: boot.md  card-up.md  continuation.md  doctrine.md  implement.md  inquisition.md  next.md  notes.md  parity.md  planning-memories.md  roadmap.md
spec_driver/: __init__.py
specify/: decisions  policies  product  tech
supekku/: AGENTS.md  INIT.md  __init__.py  justfile
supekku/cli/: adr.py  (+49 more)
wub/: Gemfile  Justfile  behaviour.js  index.html  mod.just  styles.css  supekku.slim
(+3839 files in other folders)
