[project]
name = "spec-driver"
dynamic = ["version"]
description = "Specification-driving development toolkit"
authors = [
    { name = "David Lee", email = "dav@davlee.com" }
]
readme = "README.md"
long_description_content_type = "text/markdown"
license = { text = "FSL-1.1-ALv2" }
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.0",
    "pydantic>=2.0,<3.0",
    "pyyaml>=6.0.3",
    "python-frontmatter>=1.1.0",
    "textual>=8.0,<9.0",
    "tomlkit>=0.13.0",
    "typer>=0.15.0",
    "watchfiles>=1.0,<2.0",
    "ty>=0.0.23",
]
keywords = ["specification", "documentation", "adr", "architecture-decision-records", "spec-sync"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/davidlee/spec-driver"
Repository = "https://github.com/davidlee/spec-driver"
Issues = "https://github.com/davidlee/spec-driver/issues"
Website = "https://supekku.dev/"


[project.scripts]
spec-driver = "supekku.cli.main:main"

#
# BUILD MANIFEST
#

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "VERSION"
pattern = "(?P<version>.+)"

[tool.hatch.build.targets.wheel]
packages = ["supekku"]
exclude = [
    "supekku/CLAUDE.md",
    ".direnv/",
    ".envrc",
    ".venv/",
    "flake.nix",
    "flake.lock",
    ".uv-",
    ".uv-cache/",
    ".pytest_cache/",
    "**/__pycache__/",
    "**/*.pyc",
    "**/*.pyo",
]
[tool.hatch.build.targets.wheel.force-include]
"memory" = "supekku/memory"


[tool.hatch.build.targets.sdist]
packages = ["supekku"]

exclude = [
    "supekku/CLAUDE.md",
    ".direnv/",
    ".envrc",
    ".venv/",
    "flake.nix",
    "flake.lock",
    ".uv-",
    ".uv-cache/",
    ".pytest_cache/",
    "**/__pycache__/",
    "**/*.pyc",
    "**/*.pyo",
]

[tool.hatch.build.targets.sdist.force-include]
"memory" = "memory"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.0",
    "ruff>=0.14.0",
    "pylint>=4.0.2",
    "pylint-per-file-ignores>=3.1.0",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
asyncio_mode = "auto"
testpaths = [
    "supekku/cli",
    "supekku/claude.hooks",
    "supekku/scripts",
    "supekku/scripts/lib",
    "supekku/tui",
]

[tool.ruff]
line-length = 88
indent-width = 2
target-version = "py312"

[tool.ruff.lint]
# select = ["ALL"]
extend-select = [
      "F",    # Pyflakes
      "E",    # pycodestyle errors
      "W",    # pycodestyle warnings
      "I",    # isort
      "N",    # pep8-naming
      "UP",   # pyupgrade
      "B",    # flake8-bugbear
      "A",    # flake8-builtins
      "C4",   # flake8-comprehensions
      "ICN",  # import conventions
      "RET",  # return values
      "PTH",  # Use pathlib instead of os.path
      "COM",  # enforce trailing comma rules
      "TID",  # Some good import practices
      "RET",  # Good return practices
      "FA",   # Enforce from __future__ import annotations
      "SIM",  # simplify
      "PL",   # pylint (selective)
]

ignore = [
      "T201",    # print (CLI tools need it)
      "S101",    # assert (pytest needs it)
      "PLR0911", # too-many-return-statements
      "PLR0912", # too-many-branches
      "PLR0913", # too-many-arguments
      "PLR0915", # too-many-statements
      "C901",    # complex-structure
      "FBT001", "FBT002",  # Boolean args
      "PLR2004",  # Magic values - I have my doubts but ...
      "D",        # All pydocstyle (handle separately if wanted)
      "PTH123",   # Allow open() - sometimes clearer
      "COM812",   # formatter wants trailing comma rule suppressed
]
fixable = ["ALL"]
unfixable = []
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[lint.pydocstyle]
convention = "google"

[lint.per-file-ignores]
"*test*.py" = [
    "S101",    # asserts allowed in tests...
    "ARG",     # Unused function args -> fixtures nevertheless are functionally relevant...
    "FBT",     # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
    "PLR2004", # Magic value used in comparison, ...
    "S311",    # Standard pseudo-random generators are not suitable for cryptographic purposes
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"supekku/scripts/**/*.py" = [
    "E402"  # ??
]
"supekku/cli/**/*.py" = [
    "E402",    # ??
    "PLC0415"  # ??
]

#
# PyLint :: main
#
[tool.pylint.main]
fail-under = 9.70 ## FAIL-UNDER ##
reports = true
output-format = "colorized"
indent-string = "  "
load-plugins = [
    "pylint_per_file_ignores",
    "pylint.extensions.docstyle",
    "pylint.extensions.docparams",
    "pylint.extensions.mccabe",
]

[tool.pylint.parameter_documentation]
default-docstring-type = "google"

[tool.pylint.format]
indent-string = "  "
expected-line-ending-format = "LF"


[tool.pylint.'messages control']
per-file-ignores = [
    "**/*_test.py:protected-access,missing-function-docstring",
    "**/test_*.py:protected-access,missing-function-docstring",
]

[tool.pylint.design]
exclude-too-few-public-methods = []
ignored-parents = []
max-args = 5
max-attributes = 7
max-bool-expr = 5
max-branches = 12
# max-complexity = 10
max-locals = 15
max-parents = 7
max-positional-arguments = 5
max-public-methods = 20
max-returns = 6
max-statements = 50
min-public-methods = 2
